--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,8 @@
 //Colors
-$gray21: #363636;
-$blue: #1868fd;
-$blue-dark: #19317599;
+$gray21:#27a102;
+$blue: #5e5858;
+$dark: #000000;
+$blue-dark: #000000;
 $blue-light: #bbdefb;
 $white: #fff;
 
