--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -27,9 +27,42 @@
   transition: 1s ease;
 }
 
-.btn--color {
-  background-image: linear-gradient(to right, #1868fd, #3875e6, #04befe, #3c6fbd);
-  box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
+.btn-three {
+  color: #FFF;
+  transition: all 0.5s;
+  position: relative;
+}
+.btn-three::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(255,255,255,0.1);
+  transition: all 0.3s;
+}
+.btn-three:hover::before {
+  opacity: 0 ;
+  transform: scale(0.5,0.5);
+}
+.btn-three::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.3s;
+  border: 1px solid rgba(255,255,255,0.5);
+  transform: scale(1.2,1.2);
+}
+.btn-three:hover::after {
+  opacity: 1;
+  transform: scale(1,1);
 }
 
 .btn--degrade {
