--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,9 +2,9 @@
   <div class="about__details">
     <h1 class="about__title">{{title}}<span class="gray">G</span>abbanini.</h1>
     <p class="about__paragraph">{{paragraph}}</p>
-    <a href="https://docs.google.com/document/d/18CJ66UeT3SOSazgvb7G_e39crXcQbi-2/edit?usp=sharing&ouid=106696477638908142346&rtpof=true&sd=true">
+    <a href="assets/pdf/cvGabbanini.pdf">
       <button class="btn-primary btn-three">CURRICULUM</button>
     </a>
   </div>
-  <img class="about__img" src="assets/img/profilePicture.jpg" alt="perfil">
+  <img class="about__img" src="assets/img/profilePicture.png" alt="perfil">
 </div>
