--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,15 +1,16 @@
 <footer class="contato" id="contato">
-  <h2 class="contato__title" [@scrollAnimation]="state">Entre em contato</h2>
-  <a href="mailto:ssilva.bn@gmail.com" [@scrollAnimation]="state">
-    <button class="btn-secondary btn--degrade">CONTATO</button>
-  </a>
   <ul class="list" [@scrollAnimation]="state">
     <li class="list__item ">
-      <a href="https://github.com/BraianS"><i class="fab fa-github fa-3x "></i></a>
+      <a href="https://github.com/francegabba1995"><i class="fab fa-github fa-3x "></i></a>
     </li>
     <li class="list__item">
-      <a href="https://twitter.com/braiancode"><i class="fab fa-twitter fa-3x"></i></a>
+      <a href="https://www.linkedin.com/in/francesco-gabbanini-1a52a5194/"><i class="fab fa-linkedin fa-3x"></i></a>
     </li>
   </ul>
-  &copy; Copyright 2019
+  <div>
+    &copy; 2023. Francesco Gabbanini
+  </div>
+  <div>
+    Made with ❤ by Francesco Gabbanini
+  </div>
 </footer>
